--- a/Manga.html
+++ b/Manga.html
@@ -2,24 +2,21 @@
 <html lang="es">
 
 <head>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="estilopaginas.css" />
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
   <title>Reseñas de Libros</title>
-  <link rel="stylesheet" href="style.css" />
-
-
 
 </head>
 
 <body>
-  <header>
+  <header class="menu">
     <nav class="navbar navbar-expand-lg bg-black">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/sinFONDO.png" alt="Logo libros" height="50"></a>
+        <a class="navbar-brand" href="index.html#section1"><img src="img/sinFONDO.png" alt="Logo libros" height="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,10 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="index.html#section1">Incio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="index.html#section3">¿Quiénes somos?</a>
+              <a class="nav-link active text-white" aria-current="page" href="#inicio1">Incio</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle  text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -48,6 +42,9 @@
                 </li>
                 <li><a class="dropdown-item text-white" href="fantasia.html">Fantasía</a></li>
               </ul>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="index.html#section3">¿Quiénes somos?</a>
+              </li>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html#section4">Contacto</a>
@@ -61,107 +58,137 @@
 
   </header>
 
-  <h2>Manga/Anime</h2>
-  <p>Aquí vas a encontrar nuestras recomendaciones de Mangas y Animes</p>
-  <a href=><img src="img/mangas/akira.jpg" alt="Akira" height="200px"></a>
-  <a href="#articulo1"><img src="img/mangas/deathNote.jpg" alt="Death Note" height="200px"></a>
-  <a href=""><img src="img/mangas/demonSlayer.jpg" alt="Demon Slayer" height="200px"></a>
-  <a href=""><img src="img/mangas/dragonball.jpg" alt="Dragon Ball" height="200px"></a>
-  <a href=""><img src="img/mangas/fullmetal.jpg" alt="Full Metal Alchemist" height="200px"></a>
-  <a href=""><img src="img/mangas/naruto.png" alt="Naruto" height="200px"></a>
-  <a href=""><img src="img/mangas/onepiece.jpg" alt="One Piece" height="200px"> </a>
-
-
-
-
-
-  <article>
-    <h2>Akira</h2>
-
-    <p id="articulo">La influencia de Akira en la cultura popular occidental se deja sentir desde el primer instante.
-      Tanto el anime como el manga son mayúsculos. Una de esas experiencias que te arrastran y no te
-      sueltan hasta dejarte los huesos, con una lectura de sociedad postapocalíptica y mundo cyberpunk inmejorable.
-      Digna del mismísimo Philip K. Dick.<img src="img/mangas/akira.jpg" alt="Akira" height="200px">
-      <img src="img/mangas/akira.jpg" alt="Akira" height="200px">
-      <img src="img/mangas/akira.jpg" alt="Akira" height="200px">
-    </p>
-
-  </article>
-
-  <article id="articulo1">
-    <h2> Death Note</h2>
-    <p>Narrada por Tsugumi Oba e ilustrada por Takeshi Obata, Death Note narra la historia de Light
-      Yagami, un inteligente y
-      taciturno estudiante de secundaria que está aburrido con su vida. Un buen día, llega a sus manos un extraño
-      cuaderno.
-      «Cuaderno de muerte», reza la portada. ¿De qué se trata? ¿Acaso es una broma? ¿Qué significa todo eso?
-
-      Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse. Divertida, intensa,
-      llena de
-      grandes e inolvidables momentos, con personajes carismáticos y una trama que engancha. El anime está a la altura,
-      obviamente,
-      pero la experiencia lectora también es muy recomendable.</p>
-    </div>
+  <section class="inicio" id="inicio1">
     <div>
-      <img src="img/mangas/deathNote.jpg" alt="Death Note" height="200px">
-      <img src="img/mangas/akira.jpg" alt="Akira" height="200px">
-      <img src="img/mangas/akira.jpg" alt="Akira" height="200px">
+      <h2>Manga/Anime</h2>
+      <p>Aquí vas a encontrar nuestras recomendaciones de Mangas y Animes</p>
     </div>
-    
-  </article>
-
-  <article>
-    <h2>Demon Slayer</h2>
-    <p id="articulo">Guardianes de la Noche no trata de reinventar nada. Es un shonen clásico, pero cuenta con unos
-      protagonistas arrolladores y un
-      mundo extraordinariamente bien construido. Donde mucho abunda, poco brilla; pero lo que brilla, lo hace con una
-      potencia cercana
-      al sol. Esta es la última estrella de la industria del manga. No te la pierdas, en serio.
-      <img src="img/mangas/demonSlayer.jpg" alt="Demon Slayer" height="200px">
-    </p>
-  </article>
-
-  <article>
-    <h2>Dragon Ball</h2>
-    <p id="articulo">Un valiente joven con poderes increíbles se aventura hacia un viaje místico en tierras exóticas
-      llenas de guerreros nobles,
-      princesas hermosas, monstruos mutantes, extraterrestres y crueles ejércitos.
-      <img src="img/mangas/dragonball.jpg" alt="Dragon Ball" height="200px">
-    </p>
-  </article>
-  <article>
-    <h2>Full Metal Alchemist</h2>
-    <p id="articulo">Escrita y dibujada por Hiromu Arakawa, Fullmetal Alchemist nos sumerge en un universo steampunk
-      próximo al mundo creado por la Revolución Industrial.
-      Sin embargo, en este mundo de ficción la alquimia es una de las técnicas científicas más empleadas y conocidas por
-      los humanos. Y allí es donde entran
-      Edward y Alphonse Elric.
-      <img src="img/mangas/fullmetal.jpg" alt="Full Metal Alchemist" height="200px">
-    </p>
-  </article>
-
-  <article>
-    <h2>Naruto</h2>
-    <p id="articulo">Escrita y dibujada por Masashi Kishimoto, Naruto cuenta la historia de un ninja adolescente. Sus
-      padres murieron cuando él era solo un niño tras el ataque del
-      Zorro Demonio de Nuevo Colas. Desde entonces, Naruto Uzumaki crece en su querida aldea y sueña con convertirse en
-      Hokage, líder de su pueblo. Busca
-      reconocimiento y ser alguien importante, dado a sus amigos y su nueva familia.
-      <img src="img/mangas/naruto.png" alt="Naruto" height="200px">
-    </p>
-  </article>
+    <div class="imginicio">
+      <a href="#section2"><img src="img/mangas/deathnote/deathNote.jpg" alt="Death Note" height="200px"></a>
+      <a href="#section3"><img src="img/mangas/KNY/demonSlayer.jpg" alt="Demon Slayer" height="200px"></a>
+      <a href="#section4"><img src="img/mangas/dragonball/dragonball.jpg" alt="Dragon Ball" height="200px"></a>
+      <a href="#section5"><img src="img/mangas/fullmetal/fullmetal.jpg" alt="Full Metal Alchemist" height="200px"></a>
+      <a href="#section6"><img src="img/mangas/naruto/naruto.png" alt="Naruto" height="200px"></a>
+      <a href="#section7"><img src="img/mangas/onepice/images.jpg" alt="One Piece" height="200px"> </a>
+    </div>
+  </section>
 
 
-  <article>
-    <h2>One Piece</h2>
-    <p id="articulo">Narrada e ilustrada por Eiichiro Oda, One Piece es quizás el manga más importante, grande y
-      reconocido de la historia. Pocas franquicias tienen el peso que tiene
-      One Piece. Sin embargo, a pesar de su magnífica narrativa, es una historia extraordinariamente extensa. La
-      cantidad de episodios podría echar para atrás al nuevo
-      lector. Pese a ello, lo recomendamos.
-      <img src="img/mangas/onepiece.jpg" alt="One Piece" height="200px">
-    </p>
-  </article>
+
+  <section class="section" id="section2">
+    <div class="contenido">
+      <h2>Death Note</h2>
+      <p id="articulo">Narrada por Tsugumi Oba e ilustrada por Takeshi Obata, Death Note narra la historia de Light
+        Yagami, un inteligente y
+        taciturno estudiante de secundaria que está aburrido con su vida. Un buen día, llega a sus manos un extraño
+        cuaderno.
+        «Cuaderno de muerte», reza la portada. ¿De qué se trata? ¿Acaso es una broma? ¿Qué significa todo eso?
+
+        Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse. Divertida,
+        intensa,
+        llena de
+        grandes e inolvidables momentos, con personajes carismáticos y una trama que engancha. El anime está a la
+        altura,
+        obviamente,
+        pero la experiencia lectora también es muy recomendable.
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/deathnote/deathNote.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/deathnote/deathNote2.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/deathnote/deathNote3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
+
+  <section class="section" id="section3">
+    <div class="contenido">
+      <h2>Demon Slayer</h2>
+      <p id="articulo">Guardianes de la Noche no trata de reinventar nada. Es un shonen clásico, pero cuenta con unos
+        protagonistas arrolladores y un
+        mundo extraordinariamente bien construido. Donde mucho abunda, poco brilla; pero lo que brilla, lo hace con
+        una
+        potencia cercana
+        al sol. Esta es la última estrella de la industria del manga. No te la pierdas, en serio.
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/KNY/demonSlayer.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/KNY/demonSlaye2.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/KNY/demonSlaye3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
+
+  <section class="section" id="section4">
+    <div class="contenido">
+      <h2>Dragon Ball</h2>
+      <p id="articulo">Un valiente joven con poderes increíbles se aventura hacia un viaje místico en tierras exóticas
+        llenas de guerreros nobles,
+        princesas hermosas, monstruos mutantes, extraterrestres y crueles ejércitos.
+
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/dragonball/dragonball.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/dragonball/dragonball2.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/dragonball/dragonball3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
+
+  <section class="section" id="section5">
+    <div class="contenido">
+      <h2>Full Metal Alchemist</h2>
+      <p id="articulo">Escrita y dibujada por Hiromu Arakawa, Fullmetal Alchemist nos sumerge en un universo steampunk
+        próximo al mundo creado por la Revolución Industrial.
+        Sin embargo, en este mundo de ficción la alquimia es una de las técnicas científicas más empleadas y conocidas
+        por
+        los humanos. Y allí es donde entran
+        Edward y Alphonse Elric.
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/fullmetal/fullmetal.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/fullmetal/fullmetal2.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/fullmetal/fullmetal3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
+
+
+  <section class="section" id="section6">
+    <div class="contenido">
+      <h2>Naruto</h2>
+      <p id="articulo">>Escrita y dibujada por Masashi Kishimoto, Naruto cuenta la historia de un ninja adolescente.
+        Sus
+        padres murieron cuando él era solo un niño tras el ataque del
+        Zorro Demonio de Nuevo Colas. Desde entonces, Naruto Uzumaki crece en su querida aldea y sueña con convertirse
+        en
+        Hokage, líder de su pueblo. Busca
+        reconocimiento y ser alguien importante, dado a sus amigos y su nueva familia.
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/naruto/naruto.png" alt="Akira" height="200px">
+      <img src="img/mangas/naruto/naruto2.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/naruto/naruto3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
+
+
+  <section class="section" id="section7">
+    <div class="contenido">
+      <h2>One Piece</h2>
+      <p id="articulo">Narrada e ilustrada por Eiichiro Oda, One Piece es quizás el manga más importante, grande y
+        reconocido de la historia. Pocas franquicias tienen el peso que tiene
+        One Piece. Sin embargo, a pesar de su magnífica narrativa, es una historia extraordinariamente extensa. La
+        cantidad de episodios podría echar para atrás al nuevo
+        lector. Pese a ello, lo recomendamos.
+      </p>
+    </div>
+    <div class="imagenes">
+      <img src="img/mangas/onepice/images.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/onepice/onepiece.jpg" alt="Akira" height="200px">
+      <img src="img/mangas/onepice/onepiece3.jpg" alt="Akira" height="200px">
+    </div>
+  </section>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
