--- a/Manga.html
+++ b/Manga.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="menu">
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html#section1"><img src="img/sinFONDO.png" alt="Logo libros" height="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -32,7 +32,7 @@
                 Categorias
               </a>
               <ul class="dropdown-menu bg-black">
-                <li><a class="dropdown-item text-white" href="Manga.html">Manga</a></li>
+                <li><a class="dropdown-item text-white" href="Manga.html" >Manga</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -40,7 +40,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item text-white" href="fantasia.html">Fantasía</a></li>
+                <li><a class="dropdown-item text-white" href="fantasia.html" >Fantasía</a></li>
               </ul>
               <li class="nav-item">
                 <a class="nav-link text-white" href="index.html#section3">¿Quiénes somos?</a>
@@ -64,12 +64,12 @@
       <p>Aquí vas a encontrar nuestras recomendaciones de Mangas y Animes</p>
     </div>
     <div class="imginicio">
-      <a href="#section2"><img src="img/mangas/deathnote/deathNote.jpg" alt="Death Note" height="200px"></a>
-      <a href="#section3"><img src="img/mangas/KNY/demonSlayer.jpg" alt="Demon Slayer" height="200px"></a>
-      <a href="#section4"><img src="img/mangas/dragonball/dragonball.jpg" alt="Dragon Ball" height="200px"></a>
-      <a href="#section5"><img src="img/mangas/fullmetal/fullmetal.jpg" alt="Full Metal Alchemist" height="200px"></a>
-      <a href="#section6"><img src="img/mangas/naruto/naruto.png" alt="Naruto" height="200px"></a>
-      <a href="#section7"><img src="img/mangas/onepice/images.jpg" alt="One Piece" height="200px"> </a>
+      <a href="#section2"><img src="img/mangas/deathnote/deathNote.jpg" alt="Death Note" ></a>
+      <a href="#section3"><img src="img/mangas/KNY/demonSlayer.jpg" alt="Demon Slayer"></a>
+      <a href="#section4"><img src="img/mangas/dragonball/dragonball.jpg" alt="Dragon Ball"></a>
+      <a href="#section5"><img src="img/mangas/fullmetal/fullmetal.jpg" alt="Full Metal Alchemist"></a>
+      <a href="#section6"><img src="img/mangas/naruto/naruto.png" alt="Naruto"></a>
+      <a href="#section7"><img src="img/mangas/onepice/images.jpg" alt="One Piece"> </a>
     </div>
   </section>
 
