--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html#section3">Contacto</a>
+                            <a class="nav-link text-white" href="index.html#footer">Contacto</a>
                         </li>
                     </ul>
 
@@ -52,7 +52,7 @@
 
         </div>
         <div>
-            <img src="img/libros.png" id="imag1" />
+            <img src="img/libros.png" id="imag1" height="400px" />
         </div>
     </section>
 
