Correciones de hipervinculo y suma HTML Novelas

--- a/fantasia.html
+++ b/fantasia.html
@@ -43,11 +43,11 @@
                 <li><a class="dropdown-item text-white" href="fantasia.html">Fantasía</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link text-white" href="index.html#section3">¿Quiénes somos?</a>
+                <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
               </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="index.html#section4">Contacto</a>
+              <a class="nav-link text-white" href="index.html#footer">Contacto</a>
             </li>
           </ul>
 
@@ -60,8 +60,8 @@
 
   <section class="inicio" id="inicio1">
     <div>
-      <h2>Fantacia</h2>
-      <p>Aquí vas a encontrar nuestras recomendaciones libros de Fantacia</p>
+      <h2>Fantasía</h2>
+      <p>Aquí vas a encontrar nuestras recomendaciones libros de Fantasía</p>
     </div>
     <div class="imginicio">
       <a href="#section2"><img src="img/fantasia/juegodetronos.jpg" alt="Death Note" height="200px"></a>
