--- a/Manga.html
+++ b/Manga.html
@@ -43,11 +43,11 @@
                 <li><a class="dropdown-item text-white" href="fantasia.html" >Fantasía</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link text-white" href="index.html#section3">¿Quiénes somos?</a>
+                <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
               </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="index.html#section4">Contacto</a>
+              <a class="nav-link text-white" href="index.html#footer">Contacto</a>
             </li>
           </ul>
 
