--- a/Manga.html
+++ b/Manga.html
@@ -189,6 +189,16 @@
       <img src="img/mangas/onepice/onepiece3.jpg" alt="Akira" height="200px">
     </div>
   </section>
+  <footer id="footer">
+    <img src="img/sinFONDO.png" alt="Logo">
+    <p>Copyright © 2022 - Todos los derechos reservados</p>
+    <div>
+        <a href="sin__servicio.html"><img src="img/facebook-logo-3-1.png" alt="Facebook"></a>
+        <a href="sin__servicio.html"><img src="img/logo-instagram.png" alt="Instagram"></button></a>
+        <a href="sin__servicio.html"><img src="img/whatsapp-logo.png" alt="Whatsapp"></a>
+    </div>
+
+</footer>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
