Se corrige el responsive

--- a/Manga.html
+++ b/Manga.html
@@ -87,10 +87,7 @@
         Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse. Divertida,
         intensa,
         llena de
-        grandes e inolvidables momentos, con personajes carismáticos y una trama que engancha. El anime está a la
-        altura,
-        obviamente,
-        pero la experiencia lectora también es muy recomendable.
+        grandes e inolvidables momentos, con personajes carismáticos y una trama que engancha.
       </p>
     </div>
     <div class="imagenes">
@@ -189,10 +186,11 @@
       <img src="img/mangas/onepice/onepiece3.jpg" alt="Akira" height="200px">
     </div>
   </section>
+
   <footer id="footer">
     <img src="img/sinFONDO.png" alt="Logo">
     <p>Copyright © 2022 - Todos los derechos reservados</p>
-    <div>
+    <div id="#imgfooter">
         <a href="sin__servicio.html"><img src="img/facebook-logo-3-1.png" alt="Facebook"></a>
         <a href="sin__servicio.html"><img src="img/logo-instagram.png" alt="Instagram"></button></a>
         <a href="sin__servicio.html"><img src="img/whatsapp-logo.png" alt="Whatsapp"></a>
