--- a/fantasia.html
+++ b/fantasia.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="menu">
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html#section1"><img src="img/sinFONDO.png" alt="Logo libros" height="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -84,13 +84,7 @@
         cuaderno.
         «Cuaderno de muerte», reza la portada. ¿De qué se trata? ¿Acaso es una broma? ¿Qué significa todo eso?
 
-        Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse. Divertida,
-        intensa,
-        llena de
-        grandes e inolvidables momentos, con personajes carismáticos y una trama que engancha. El anime está a la
-        altura,
-        obviamente,
-        pero la experiencia lectora también es muy recomendable.
+        Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse.
       </p>
     </div>
     <div class="imagenes">
