--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="img/tarjetas/tarjeta3.jpg" alt="">
                 </figure>
                 <div class="textocard">
-                    <a href="fantasia.html">fantasia</a>
+                    <a href="fantasia.html">fantasía</a>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                     <img src="img/tarjetas/tarjeta5.jpg" alt="">
                 </figure>
                 <div class="textocard">
-                    <a href="sin__servicio.html">economia/finansas</a>
+                    <a href="sin__servicio.html">economia</a>
                 </div>
             </div>
 
@@ -166,7 +166,7 @@
     <footer id="footer">
         <img src="img/sinFONDO.png" alt="Logo">
         <p>Copyright © 2022 - Todos los derechos reservados</p>
-        <div>
+        <div id="imgfooter">
             <a href="sin__servicio.html"><img src="img/facebook-logo-3-1.png" alt="Facebook"></a>
             <a href="sin__servicio.html"><img src="img/logo-instagram.png" alt="Instagram"></button></a>
             <a href="sin__servicio.html"><img src="img/whatsapp-logo.png" alt="Whatsapp"></a>
