--- a/fantasia.html
+++ b/fantasia.html
@@ -16,7 +16,8 @@
   <header class="menu">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html#section1"><img src="img/sinFONDO.png" alt="Logo libros" height="50"></a>
+        <a class="navbar-brand" href="index.html#section1"><img src="img/sinFONDO.png" alt="Logo libros"
+            height="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,9 +43,9 @@
                 </li>
                 <li><a class="dropdown-item text-white" href="fantasia.html">Fantasía</a></li>
               </ul>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
+            </li>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html#footer">Contacto</a>
@@ -68,7 +69,8 @@
       <a href="#section3"><img src="img/fantasia/choquedereyes.jpg" alt="Demon Slayer" height="200px"></a>
       <a href="#section4"><img src="img/fantasia/hp/hp5.jpg" alt="Dragon Ball" height="200px"></a>
       <a href="#section5"><img src="img/fantasia/hp/hp6.jpg" alt="Full Metal Alchemist" height="200px"></a>
-      <a href="#section6"><img src="img/fantasia/lotr/db6ea9ffa875e2c1a81aec6fbb2b48ec.jpg" alt="Naruto" height="200px"></a>
+      <a href="#section6"><img src="img/fantasia/lotr/db6ea9ffa875e2c1a81aec6fbb2b48ec.jpg" alt="Naruto"
+          height="200px"></a>
       <a href="#section7"><img src="img/fantasia/lotr/elretornodelrey.jpg" alt="One Piece" height="200px"> </a>
     </div>
   </section>
@@ -78,13 +80,11 @@
   <section class="section" id="section2">
     <div class="contenido">
       <h2>Cancion de hielo y fuego: Juego de tronos</h2>
-      <p id="articulo">Narrada por Tsugumi Oba e ilustrada por Takeshi Obata, Death Note narra la historia de Light
-        Yagami, un inteligente y
-        taciturno estudiante de secundaria que está aburrido con su vida. Un buen día, llega a sus manos un extraño
-        cuaderno.
-        «Cuaderno de muerte», reza la portada. ¿De qué se trata? ¿Acaso es una broma? ¿Qué significa todo eso?
-
-        Death Note es otro de los mangas indispensables para todo lector amateur que quiera iniciarse.
+      <p id="articulo">Ned Stark vivía en paz siendo el señor del norte, pero todo parece cambiar cunado recibe una
+        invitación de su viejo amigo y rey de los 7 reinos Robert para ser su consejero. Ahora tendrá que ayudar a
+        gobernar un decadente reino y proteger el torno de todos los q buscan el poder para sus propios beneficios, y se
+        dará cuenta q las
+        amenazas no siempre vienen de afuera.
       </p>
     </div>
     <div class="imagenes">
@@ -97,12 +97,10 @@
   <section class="section" id="section3">
     <div class="contenido">
       <h2>Juego de tronos: Choque de reyes</h2>
-      <p id="articulo">Guardianes de la Noche no trata de reinventar nada. Es un shonen clásico, pero cuenta con unos
-        protagonistas arrolladores y un
-        mundo extraordinariamente bien construido. Donde mucho abunda, poco brilla; pero lo que brilla, lo hace con
-        una
-        potencia cercana
-        al sol. Esta es la última estrella de la industria del manga. No te la pierdas, en serio.
+      <p id="articulo">Las cosas se complican en los 7 reinos cuando se alzan 5 reyes que reclaman el derecho a gobernar
+        y no
+        piensan discutirlo de una forma pacifica, lo q lleva a muchos más conflictos y a inevitables guerras para ver
+        quien se quedara con el torono.
       </p>
     </div>
     <div class="imagenes">
@@ -115,9 +113,11 @@
   <section class="section" id="section4">
     <div class="contenido">
       <h2>Harry Potter: La orden del fenix</h2>
-      <p id="articulo">Un valiente joven con poderes increíbles se aventura hacia un viaje místico en tierras exóticas
-        llenas de guerreros nobles,
-        princesas hermosas, monstruos mutantes, extraterrestres y crueles ejércitos.
+      <p id="articulo">En su quinto año en Hogwarts, Harry descubre que muchos integrantes de la comunidad de magos no
+        conocen la verdad acerca de su encuentro con Lord Voldemort. Cornelius Fudge, ministro de magia, designa a
+        Dolores Umbridge como maestra de defensa contra de las artes oscuras porque cree que el profesor Dumbledore
+        planea apoderarse de su trabajo. Pero sus enseñanzas son inadecuadas, por lo que Harry prepara a los estudiantes
+        para defender la escuela en contra del mal.
 
       </p>
     </div>
@@ -131,12 +131,8 @@
   <section class="section" id="section5">
     <div class="contenido">
       <h2>Harry potter: y el misterio del principe</h2>
-      <p id="articulo">Escrita y dibujada por Hiromu Arakawa, Fullmetal Alchemist nos sumerge en un universo steampunk
-        próximo al mundo creado por la Revolución Industrial.
-        Sin embargo, en este mundo de ficción la alquimia es una de las técnicas científicas más empleadas y conocidas
-        por
-        los humanos. Y allí es donde entran
-        Edward y Alphonse Elric.
+      <p id="articulo">Harry descubre un poderoso libro y, mientras trata de descubrir sus orígenes, colabora con
+        Dumbledore en la búsqueda de una serie de objetos mágicos que ayudarán en la destrucción de Lord Voldemort.
       </p>
     </div>
     <div class="imagenes">
@@ -150,13 +146,9 @@
   <section class="section" id="section6">
     <div class="contenido">
       <h2>El señor de los anillos: La comunidad del anillo</h2>
-      <p id="articulo">>Escrita y dibujada por Masashi Kishimoto, Naruto cuenta la historia de un ninja adolescente.
-        Sus
-        padres murieron cuando él era solo un niño tras el ataque del
-        Zorro Demonio de Nuevo Colas. Desde entonces, Naruto Uzumaki crece en su querida aldea y sueña con convertirse
-        en
-        Hokage, líder de su pueblo. Busca
-        reconocimiento y ser alguien importante, dado a sus amigos y su nueva familia.
+      <p id="articulo">Frodo Bolsón es un hobbit al que su tío Bilbo hace portador del poderoso Anillo Único, capaz de
+        otorgar un poder ilimitado al que la posea, con la finalidad de destruirlo. Sin embargo, fuerzas malignas muy
+        poderosas quieren arrebatárselo.
       </p>
     </div>
     <div class="imagenes">
@@ -170,11 +162,8 @@
   <section class="section" id="section7">
     <div class="contenido">
       <h2>El señor de los anillos: el retorno del rey</h2>
-      <p id="articulo">Narrada e ilustrada por Eiichiro Oda, One Piece es quizás el manga más importante, grande y
-        reconocido de la historia. Pocas franquicias tienen el peso que tiene
-        One Piece. Sin embargo, a pesar de su magnífica narrativa, es una historia extraordinariamente extensa. La
-        cantidad de episodios podría echar para atrás al nuevo
-        lector. Pese a ello, lo recomendamos.
+      <p id="articulo">Frodo, Sam y Gollum se acercan al monte del Destino, donde destruirán el anillo o perecerán en el
+        intento. Mientras, Aragorn y sus compañeros se enfrentan a las monstruosas tropas de Sauron.
       </p>
     </div>
     <div class="imagenes">
@@ -187,12 +176,12 @@
     <img src="img/sinFONDO.png" alt="Logo">
     <p>Copyright © 2022 - Todos los derechos reservados</p>
     <div>
-        <a href="sin__servicio.html"><img src="img/facebook-logo-3-1.png" alt="Facebook"></a>
-        <a href="sin__servicio.html"><img src="img/logo-instagram.png" alt="Instagram"></button></a>
-        <a href="sin__servicio.html"><img src="img/whatsapp-logo.png" alt="Whatsapp"></a>
+      <a href="sin__servicio.html"><img src="img/facebook-logo-3-1.png" alt="Facebook"></a>
+      <a href="sin__servicio.html"><img src="img/logo-instagram.png" alt="Instagram"></button></a>
+      <a href="sin__servicio.html"><img src="img/whatsapp-logo.png" alt="Whatsapp"></a>
     </div>
 
-</footer>
+  </footer>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
