--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                                 href="index.html#section1">Incio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#sectioncard">categorias</a>
+                            <a class="nav-link text-white" href="#sectioncard">Categorias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="index.html#section2">¿Quiénes somos?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html#footer">Contacto</a>
+                            <a class="nav-link text-white" href="index.html#footer">Registrarse</a>
                         </li>
                     </ul>
 
@@ -145,22 +145,27 @@
 
     </section>
 
-    <section id="section3">
-        <div class="texto3">
-            <h3>DEJANOS TU MENSAJE</h3>
-            <br>
-            <form>
-                <label for="name">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre"><br>
-                <label for="email">Mail:</label><br>
-                <input type="text" id="email" name="email"> <br>
-                <label for="Comentario">Comentario:</label><br>
-                <textarea name="message" id="Comentario" cols="30" rows="10"></textarea>
-                <br>
-                <button type="button"
-                    onclick="alert('En este momento no podemos enviar tu mensaje, intenta nuevamente más tarde!')">Enviar!</button>
+    <section>
+        <div>
+            <form class="registro">
+                <h1 id="tituloRegistro">REGISTRARSE</h1>
+
+                <label>
+                    <input placeholder="nombre" type="text" id="nombre" name="nombre">
+                </label>
+
+                <label>
+                    <input placeholder="email" type="text" id="email" name="email">
+                </label>
+
+                <label>
+                    <input placeholder="Contraseña" type="password" id="Contraseña" name="Contraseña">
+                </label>
+
+                <button type="button" class="button" id="botonRegistrar" >Enviar</button>
             </form>
         </div>
+
     </section>
 
     <footer id="footer">
@@ -177,7 +182,9 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src="registro.js"></script>
 </body>
 
 </html>
